# ewsm

./: .clang-format  .gitignore  1.md  CMakeLists.txt  cmake_gen_solution.bat
res/: app.manifest  app.rc
src/: app.cpp  app.hpp  main_window.cpp  main_window.hpp  task_bar_icon.cpp  task_bar_icon.hpp
src/3rd/lib/: yaml-cpp.lib
src/ecs/component/service/: service_comp.hpp
src/ecs/context/paths/: paths_ctx.cpp  paths_ctx.hpp
src/ecs/context/service/: scm.cpp  scm.hpp  service_operation_thread.cpp  service_operation_thread.hpp
src/ecs/context/settings/: settings_ctx.cpp  settings_ctx.hpp
src/ecs/system/: system_base.cpp  system_base.hpp
src/ecs/system/paths/: paths_system.cpp  paths_system.hpp
src/ecs/system/service/: service_system.cpp  service_system.hpp
src/ecs/system/settings/: settings_system.cpp  settings_system.hpp
src/forms/: dummy_window.cpp  dummy_window.hpp  service_dashboard_frame.cpp.bak  service_dashboard_frame.cpp.hpp.bak  service_detail_dialog.cpp  service_detail_dialog.hpp  service_install_wizard.cpp  service_install_wizard.hpp  service_manager_frame.cpp  service_manager_frame.hpp
src/utils/: capture_utils.cpp  capture_utils.hpp  clipboard_utils.hpp  debug_utils.hpp  hotkey_utils.hpp  image_utils.hpp  keyboard_hooker.cpp  keyboard_hooker.hpp  timer_manager.cpp  timer_manager.hpp  win_priviledge_utils.hpp  win_utils.cpp  win_utils.hpp
